ajout des photos et quelques modifications sur fansite3.css.

--- a/html/fansite3.html
+++ b/html/fansite3.html
@@ -13,9 +13,9 @@
 <nav>
 <div> <!-- liste du menu de navigation-->
     <a href="../index.html"> Accueil </a>
-    <a href="../fansite/html/fansite1.html"> Médias </a>
-    <a href="../fansite/html/fansite2.html" target="_blank"> Inscription </a>
-    <a href="../fansite/html/fansite3.html"> Casting</a>
+    <a href="../html/fansite1.html"> Médias </a>
+    <a href="../html/fansite2.html" target="_blank"> Inscription </a>
+    <a href="../html/fansite3.html"> Casting</a>
 </div>
 <div> <!-- barre de recherche imput-->
     <input id="cherche" type="search" name="search"/>
@@ -29,39 +29,41 @@
 
 
 <div class="sizeimg"> 
-  <h2>Millie Bobby Brown est née le 19 février 2004 et joue le rôle de 011 c'est le personnage principal de la série 
+  <h2>Millie Bobby Brown </h2>
+  Elle est née le 19 février 2004 et joue le rôle de 011 qui est le personnage principal de la série 
   <p>Elle a joué dans certains films comme Godzilla; Enola holmes.</p>
    <img src="../medias/image/millie.jpg">
 </div>
 
 <div class="sizeimg">
-   <h2>Finn wolfhard <h2>
+   <h2>Finn Wolfhard <h2>
         <p> Il est né le 23 décembre 2002 et joue le rôle de Mike Myers. 
-        finn a jouer dans des films connu comme ça cha </h2> 
-        <img src="../strangerthings html/images/finn.jpg">
+        Finn a joué dans des films connus comme 'ça'ou la série 'The 100' </p> 
+        <img src="../medias/image/Finn.jpg">
    </div>
 
 <div class="sizeimg">
-  <h2>Noah schnapp joue le role de will byers  3 octobre 2004 (Âge: 19 ans) 
-        noah a jouer dans des films commme hubi halloween;ania ;qui est tu charlie;saoul food  </h2> 
-        <img src="../strangerthings html/images/noah.jpg">
+  <h2>Noah schnapp </h2>
+       <p> Il joue le rôle de Will Byers et est né le 3 octobre 2004.(Âge: 19 ans) 
+        noah a joué dans des films commme hubi halloween;ania ;qui est tu charlie;saoul food  </h2> 
+        </p>
+        <img src="../medias/image/noah.jpg">
 </div>
 
 <div class="sizeimg">
   <h2>Caleb Mclaughlin Lucas Sinclair</h2>
-  <P>Il est né le 13 octobre 2001 (Âge: 22 ans) 
+  <p> Il est né le 13 octobre 2001 (Âge: 22 ans) 
    caleb a jouer dans pas beaucoup de film il a jouer dans ;Concrete Cowboy;High Flying Bird </P>
 
 
-<img src="../strangerthings html/images/caleb.jpg">
+<img src="../medias/image/caleb.png">
 </div> 
 
 <div class="sizeimg"> 
-   <h2> Sadie Sinkc</h2> 
-        <img src="">
-    <p> joue le rôle de Max Mayfield et est né 16 avril 2002 (Âge: 21 ans)
-    Sadie a jouer dans un seul film ; "Eli", sorti en ...</p>
-<img src="../strangerthings html/images/sadi.avif">
+    <h2> Sadie Sink</h2> 
+        <p> Elle joue le rôle de Max Mayfield et est née le 16 avril 2002 (Âge: 21 ans)
+        Sadie a joué dans un seul film ; "Eli".</p>
+<img src="../medias/image/sadie.jpg">
    </div> 
 
 <div class="sizeimg">
@@ -69,13 +71,10 @@
    <P>Il joue le rôle de Dustin Henderson et est né le 8 septembre 2002. (Âge: 21 ans) 
    gaten a jouer dans deux film les films sont;hump; honor society</P>
 
-<img src="../strangerthings html/images/tn-500_22.jpg">
+<img src="../medias/image/gaten.jpg">
 </div> 
 
 
-
-
 </main>
-
 </body>
-
+</html>
