--- a/index.html
+++ b/index.html
@@ -36,21 +36,24 @@
             </div>
             <h3>Synopsis</h3>
             <div class="hisoire">
-                <p>L'intrigue s'étale sur plusieurs années, entre 1983 et 1986. Un soir de novembre 1983 dans la ville américaine fictive d'Hawkins en Indiana, le jeune Will Byers, âgé de douze ans, disparaît brusquement sans laisser de traces, hormis son vélo. Plusieurs personnages vont alors tenter de le retrouver : sa mère Joyce, ses amis : Lucas Sinclair, Dustin Henderson et Mike Wheeler, guidés par la mystérieuse Eleven, une jeune fille ayant des pouvoirs psychiques, ainsi que le chef de la police Jim Hopper.
+                 <p>L'intrigue s'étale sur plusieurs années, entre 1983 et 1986. Un soir de novembre 1983 dans la ville américaine fictive d'Hawkins en Indiana, le jeune Will Byers, âgé de douze ans, disparaît brusquement sans laisser de traces, hormis son vélo. Plusieurs personnages vont alors tenter de le retrouver : sa mère Joyce, ses amis : Lucas Sinclair, Dustin Henderson et Mike Wheeler, guidés par la mystérieuse Eleven, une jeune fille ayant des pouvoirs psychiques, ainsi que le chef de la police Jim Hopper.<br>
                     Parallèlement, la ville est le théâtre de phénomènes surnaturels liés au Laboratoire national de Hawkins, géré par le département de l'Énergie des États-Unis (DoE) et indirectement par la Central Intelligence Agency (CIA), dont les expériences dans le cadre du projet MK-Ultra ne semblent pas étrangères à la disparition de Will..
-                </p>
-                </div>
+                 </p>
+            </div>
+
             <div class="bande">
-               <p> Bande annonce Stranegr Things saison 4</p>
+               <p> Bande annonce Stranger Things saison 4</p>
         </div>
         <video width="420" height="340" controls>
                 <source src="https://www.youtube.com/watch?v=dXRHyzj3AFc" type=video/ogg> <source src="../fansite/medias/vidéo/Stranger Things Cast Answer the Webs Most Searched Questions  WIRED.mp4" type=video/mp4>
          </video>
-            <div class="videoFAQ">
+
+        <div class="videoFAQ">
             <video width="420" height="340" controls>
                 <source src="https://www.youtube.com/watch?v=_EvMYEfF_hQ" type=video/ogg> <source src="../fansite/medias/vidéo/STRANGER THINGS Saison 4 Bande Annonce VF (NOUVELLE, 2022).mp4" type=video/mp4>
             </video>
         </div>
+
             <div class="demogorgon">
                 <img src="../fansite/medias/image/demogorgon.png" width="700px"/>
             </div>
